tests/invalid_ast_samples/405ad40048c979d08fac3374dd3305256f4a1918672e9fdf609e50da9ea08224.py
from ast import Break
from ast import Module

tree = Module(body=[Break()], type_ignores=[])

# version: 3.12.0
#
# Source:
# break
#
#
# Error:
#     SyntaxError("'break' outside loop", ('<file>', 1, 1, None, 1, 6))
